# BattINFO

./: .buildinfo  .deploy-onto-config.yml  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  BattINFO.ttl  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  EURIO.ttl  IDENTIFIER_POLICY.md  LICENSE-DATA  MANIFEST.in  Makefile  NOTICE  OntoBATT.ttl  QUICKSTART.md  README.md  RELEASING.md  SECURITY.md  THIRD_PARTY_NOTICES.md  about.html  battery.ttl  batteryInterface.owl  batteryquantities.ttl  battinfo.html  battinfo.ttl  battinfo_inferred.ttl  catalog-v001.xml  characterisation.ttl  comb_electrochemistry_electrode_saltbridge.py  context.json  contribute.html  crystallography.owl  dublin_core_terms.ttl  electrochemicalquantities.ttl  (+42 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  emmocheck_conf.yml
.tools/: README.md
_sources/: about.rst.txt  battinfo.rst.txt  example_linked_data_timeseries_battery_data.ipynb.txt  getstarted.rst.txt  index.rst.txt
assets/: README.md  compat.yaml  glossary.txt  index.md
brand/: AGENTS.md  BRAND.md  README.md  tokens.css
context/: context.json
demo/: demo.ipynb
dev/: cell-fleet.html  cell-type-library.html  cli-spec.html  component-specs.html  data-federation.html  genindex.html  how-battinfo-is-built.html  identifiers.html  index.html  ingest-manifest-contract.html  instance-test-dataset-workflow.html  material-spec.html  objects.inv  ontology-profile-architecture.html  python-api.html  reading-a-record.html  search.html  searchindex.js  test-specs.html  validation-contract.html  workspace-authoring.html
doc/: about.html  electrochemicalquantities.html
docs/: CONTENT-MODEL.md  about.html  about.md  alpha-implementation-plan.md  alpha-scope.md  battery-descriptor-integration.md  battery-descriptor-stable-subset.md  battery-descriptor-standard.md  builder-consolidation.md  cell-descriptor-standard.md  cell-fleet.md  cell-type-library.md  cli-spec.md  component-specs.md  conf.py  contirbute.html  contribute.html  contribute.md  converter-compatibility.md  data-federation.md  dataset-registry-intake-spec.md  datasheet-standard.md  datasheet-v1-rc-checklist.md  ddata-to-bdf-pipeline.md  editorial-cell-type-workflow.md  how-battinfo-is-built.md  identifiers.md  index.html  index.md  index.rst  ingest-manifest-contract.md  ingestion-pipeline.md  instance-test-dataset-workflow.md  material-spec.md  ontology-additions-needed.md  ontology-profile-architecture.md  python-api.md  reading-a-record.md  requirements.txt  resolver.md  (+7 more)
docs_dev/: about.html  about.md  batteries.html  batteries.md  batteryquantities.html  batteryquantties.md  contribute.html  electrochemicalquantities.html  electrochemicalquantities.md  electrochemistry.html  electrochemistry.md  index.html  index.md  md_to_html.py  md_to_html_index.py  output.html  prototyping.ipynb  ttl_to_md.py
examples/: README.md  example_alkaline_electrochemical_cell.html  example_aqueous_electrolyte_KOH.html  example_cyclic_voltammetry.html  example_eis_nyquist.html  example_linked_data_battery_cell_metadata.html  example_linked_data_battery_cell_metadata.ipynb  example_linked_data_custom_battery_cell_metadata.html  example_linked_data_timeseries_battery_data.html  example_linked_data_zinc_powder.html  example_linked_data_zinc_powder.ipynb  example_person_jsonld_nb.html  example_person_jsonld_nb.ipynb  example_zinc_electrode.html  example_zinc_powder.html
legacy/: README.md  battinfo.ttl
notebooks/: 00_setup_and_navigation.ipynb  01_alpha_simple_commercial_cell_walkthrough.ipynb  01_cr2032_publication_quickstart.ipynb  01_identifier_policy_checks.ipynb  02_detailed_cell_specification_walkthrough.ipynb  02_validation_profiles.ipynb  03_mapping_json_to_jsonld.ipynb  03_rich_python_api_construction.ipynb  04_cells_clean_quality.ipynb  04_rich_dict_first_construction.ipynb  05_resolver_artifacts.ipynb  05_validation_features_walkthrough.ipynb  06_minting_and_instance_workflow.ipynb  07_query_library_features.ipynb  08_create_and_link_instance.ipynb  09_publish_pipeline_workflow.ipynb  README.md
ontology/: battinfo.ttl
pages/: about.html  contribute.html  examples.html  faq.html  getstarted.html  resources.html  tools.html
registry/: compat.yaml  w3id-template.htaccess
schema/: battinfo.yaml  cell-instance.yaml  cell-spec.yaml  cell-type.yaml  dataset.yaml  test-spec.yaml  test.yaml  types.yaml
scripts/: assemble_context.py  bench_bulk_save.py  build_resolver_artifacts.py  clean_cells_clean_nan.py  create_cell_instance.py  demo_zenodo_sandbox.py  download_cell_product_datasheets.py  execute_guides.py  gen_battinfo_vocab.py  gen_cli_reference.py  gen_context.py  gen_emmo_labels.py  gen_interop_recovery.py  gen_models.py  gen_property_reference.py  gen_schema_reference.py  gen_web_examples.py  gen_web_jsonld.py  generate_converter_version_fixtures.py  harmonize_cells.py  lint_identifier_policy.py  normalize_cell_type.py  prototyping.html  prototyping.ipynb  qa_consistency.py  sync_examples.py  validate_cells_clean.py
sphinx/: about.rst  conf.py  contribute.rst  example_linked_data_battery_cell_metadata.ipynb  example_linked_data_custom_battery_cell_metadata.ipynb  example_linked_data_timeseries_battery_data.ipynb  example_linked_data_zinc_powder.ipynb  example_person_jsonld_nb.ipynb  examples.rst  getstarted.rst  index.rst  requirements.txt  ttl_to_rst.py  util.el
tests/: installed_smoke.py  test_acceptance_workflows.py  test_agent_readiness.py  test_alpha_descriptor_matrix.py  test_alpha_scope_acceptance.py  test_alpha_workflow.py  test_api.py  test_api_submit.py  test_artifacts.py  test_atomic_persistence.py  test_authoring.py  test_authoring_identity.py  test_authoring_ws.py  test_batch_init.py  test_batch_package.py  test_battery_descriptor_contract.py  test_battery_descriptor_schema.py  test_bdc_interop.py  test_bpx_export.py  test_build_zenodo_package.py  test_bulk_save_session.py  test_bundle.py  test_cell_descriptor_contract.py  test_cell_descriptor_schema.py  test_cell_fleet.py  test_cell_spec_input_routing.py  (+109 more)
(+1586 files in other folders)
