[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "battinfo"
version = "0.1.0"
description = "Implementation and interoperability layer for the domain-battery ontology."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "LICENSE-DATA"]
authors = [
  { name = "BattINFO Team" }
]
keywords = [
  "batteries",
  "ontology",
  "EMMO",
  "linked data",
  "JSON-LD",
  "FAIR data",
  "Battery Pass",
  "semantic web",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.7",
  "typer>=0.12",
  "rich>=13.7",
  "jsonschema>=4.21",
  "pandas>=2.2",
  "pyarrow>=15.0",
  "openpyxl>=3.1",
  "rdflib>=7.0",
  "pyld>=2.0.4",
  "rocrate>=0.9"
]

[project.optional-dependencies]
storage = [
  "boto3>=1.34"
]
processing = [
  "batterydf>=0.1",
  "matplotlib>=3.8",
  "plotly>=5.20",
]
dev = [
  "build>=1.2",
  "datamodel-code-generator>=0.25",
  "linkml>=1.8",
  "nbformat>=5.9",
  "pyshacl>=0.25",
  "ruff>=0.6",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "mypy>=1.11"
]
docs = [
  "sphinx>=7.3",
  "pydata-sphinx-theme>=0.15",
  "myst-parser>=3.0",
  "nbsphinx>=0.9",
  "sphinx-design>=0.6",
]

[project.urls]
Homepage = "https://github.com/BIG-MAP/BattINFO"
Repository = "https://github.com/BIG-MAP/BattINFO"
Documentation = "https://github.com/BIG-MAP/BattINFO/tree/main/docs"
Issues = "https://github.com/BIG-MAP/BattINFO/issues"
Changelog = "https://github.com/BIG-MAP/BattINFO/blob/main/CHANGELOG.md"

[project.scripts]
battinfo = "battinfo.cli:app"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools.package-data]
battinfo = ["py.typed", "data/**/*"]

[tool.setuptools.exclude-package-data]
battinfo = ["**/__pycache__/*", "**/*.py[cod]"]

[tool.pytest.ini_options]
norecursedirs = ["legacy"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
  "E501",   # line too long — handled by formatter, not enforced here
]

[tool.ruff.lint.per-file-ignores]
# Test files use sys.path.insert before imports — this is intentional so tests
# can be run without an editable install.
"tests/*.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
files = ["src/battinfo"]
ignore_missing_imports = true   # third-party libs (rdflib, pyld, rocrate, …) ship no stubs
warn_redundant_casts = true
warn_unused_ignores = false
# Incremental adoption: the package ships py.typed, so types are gated. 31/50 modules
# are already clean and ARE checked — new type errors in them (or any new module) fail CI.
# The modules below carry pre-existing type debt and are excluded pending burn-down.
# Burn-down priority: battinfo.ws (146 of the 212 errors, almost all from the AuthoringWorkspace
# `list` method shadowing builtin `list` in annotations) is the highest-value single fix.

[[tool.mypy.overrides]]
module = [
  "battinfo.ws",
  "battinfo.publication",
  "battinfo.authoring",
  "battinfo.interop.protocols",
  "battinfo.api",
  "battinfo._workspace",
  "battinfo.transform.json_to_jsonld",
  "battinfo.interop.bpx",
  "battinfo.cli",
  "battinfo.bundle_adapter",
  "battinfo.bundle",
  "battinfo.local_workspace",
  "battinfo.interop.converter",
  "battinfo.contribution",
  "battinfo.zenodo",
  "battinfo.validate.schema",
  "battinfo.validate.references",
  "battinfo.validate.publication",
  "battinfo.ingest",
]
ignore_errors = true

[tool.coverage.run]
source = ["battinfo"]

[tool.coverage.report]
# Baseline at adoption was 72%; floor set just below to gate regressions. Ratchet up over time.
fail_under = 70
show_missing = true
