[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "battinfo"
dynamic = ["version"]
description = "Implementation and interoperability layer for the domain-battery ontology."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "Simon Clark" },
  { name = "Jesper Friis" },
  { name = "Francesca Lønstad Bleken" },
  { name = "Eibar Flores" },
  { name = "Simon Stier" },
  { name = "Corsin Battaglia" },
]
maintainers = [
  { name = "Simon Clark", email = "j.simon.clark@gmail.com" },
]
keywords = [
  "batteries",
  "ontology",
  "EMMO",
  "linked data",
  "JSON-LD",
  "FAIR data",
  "Battery Pass",
  "semantic web",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.7",
  "typer>=0.12",
  "rich>=13.7",
  "jsonschema>=4.21",
  "pandas>=2.2",
  "pyarrow>=15.0",
  "openpyxl>=3.1",
  "rdflib>=7.0",
  "pyld>=2.0.4",
  "rocrate>=0.9"
]

[project.optional-dependencies]
storage = [
  "boto3>=1.34"
]
processing = [
  "batterydf>=0.1",
  "matplotlib>=3.8",
  "plotly>=5.20",
]
dev = [
  "build>=1.2",
  "setuptools>=77",   # build backend, needed in-env for `build --no-isolation` (verification gate)
  "wheel",
  "twine>=5.0",       # dist metadata validation (`twine check`) before publishing
  "datamodel-code-generator>=0.25",
  "linkml>=1.8",
  "nbformat>=5.9",
  "pyshacl>=0.25",
  "ruff>=0.6",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-timeout>=2.3",
  "pytest-socket>=0.7",
  "mypy>=1.11"
]
docs = [
  "sphinx>=7.3",
  "pydata-sphinx-theme>=0.15",
  "myst-parser>=3.0",
  "nbsphinx>=0.9",
  "ipython>=8.0",   # provides the 'ipython3' Pygments lexer nbsphinx needs for notebook cells
  "sphinx-design>=0.6",
]

[project.urls]
Homepage = "https://github.com/BIG-MAP/BattINFO"
Repository = "https://github.com/BIG-MAP/BattINFO"
Documentation = "https://github.com/BIG-MAP/BattINFO/tree/main/docs"
Issues = "https://github.com/BIG-MAP/BattINFO/issues"
Changelog = "https://github.com/BIG-MAP/BattINFO/blob/main/CHANGELOG.md"

[project.scripts]
battinfo = "battinfo.cli:app"

[tool.setuptools]
package-dir = { "" = "src" }

# Single source of truth for the version: src/battinfo/__init__.py __version__.
# setuptools resolves this statically (AST) without importing the package.
[tool.setuptools.dynamic]
version = { attr = "battinfo.__version__" }

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools.package-data]
battinfo = ["py.typed", "data/**/*"]

[tool.setuptools.exclude-package-data]
battinfo = ["**/__pycache__/*", "**/*.py[cod]"]

[tool.pytest.ini_options]
norecursedirs = ["legacy"]
# --strict-markers: unknown markers are an error (typo guard).
# --timeout: per-test wall-clock cap so a hung test can never stall CI.
# --disable-socket: enforce that the suite is fully offline. The publish/JSON-LD
#   path resolves bundled contexts locally; all other network use is mocked.
#   Loopback is allowed for any local-IPC use. A test that legitimately needs the
#   network must opt in with @pytest.mark.enable_socket.
addopts = "--strict-markers --timeout=300 --disable-socket --allow-hosts=127.0.0.1,::1,localhost"
markers = [
  "slow: long-running test",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
  "E501",   # line too long — handled by formatter, not enforced here
]

[tool.ruff.lint.per-file-ignores]
# Test files and maintainer scripts use sys.path.insert before imports — this is
# intentional so they can run without an editable install.
"tests/*.py" = ["E402"]
".tools/**/*.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
files = ["src/battinfo"]
ignore_missing_imports = true   # third-party libs (rdflib, pyld, rocrate, …) ship no stubs
warn_redundant_casts = true
warn_unused_ignores = false
# Incremental adoption: the package ships py.typed, so types are gated. 31/50 modules
# are already clean and ARE checked — new type errors in them (or any new module) fail CI.
# The modules below carry pre-existing type debt and are excluded pending burn-down.
# Burn-down priority: battinfo.ws (146 of the 212 errors, almost all from the AuthoringWorkspace
# `list` method shadowing builtin `list` in annotations) is the highest-value single fix.

[[tool.mypy.overrides]]
module = [
  "battinfo.ws",
  "battinfo.publication",
  "battinfo.authoring",
  "battinfo.interop.protocols",
  "battinfo.api",
  "battinfo._workspace",
  "battinfo.transform.json_to_jsonld",
  "battinfo.interop.bpx",
  "battinfo.cli",
  "battinfo.bundle_adapter",
  "battinfo.bundle",
  "battinfo.local_workspace",
  "battinfo.interop.converter",
  "battinfo.contribution",
  "battinfo.zenodo",
  "battinfo.validate.schema",
  "battinfo.validate.references",
  "battinfo.validate.publication",
  "battinfo.ingest",
]
ignore_errors = true

[tool.coverage.run]
source = ["battinfo"]

[tool.coverage.report]
# Current total ~73%; floor set just below to lock in the level and gate
# regressions. Ratchet up as cli.py / ws.py coverage improves.
fail_under = 72
show_missing = true
