[build-system]
requires = ["setuptools>=83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "battinfo"
dynamic = ["version"]
description = "Implementation and interoperability layer for the domain-battery ontology."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "Simon Clark" },
  { name = "Jesper Friis" },
  { name = "Francesca Lønstad Bleken" },
  { name = "Eibar Flores" },
  { name = "Simon Stier" },
  { name = "Corsin Battaglia" },
]
maintainers = [
  { name = "Simon Clark", email = "j.simon.clark@gmail.com" },
]
keywords = [
  "batteries",
  "ontology",
  "EMMO",
  "linked data",
  "JSON-LD",
  "FAIR data",
  "Battery Pass",
  "semantic web",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.7",
  "typer>=0.27.0",
  "rich>=13.7",
  "jsonschema>=4.21",
  "rdflib>=7.0",
  "pyld>=3.1.0",
]

[project.optional-dependencies]
# Tabular data handling (CSV/Parquet/XLSX readers). Feature code imports these
# lazily and raises a teaching ImportError naming this extra when missing.
tabular = [
  "pandas>=3.0.5",
  "pyarrow>=15.0",
  "openpyxl>=3.1",
]
# RO-Crate validation for the publish pipeline.
publish = [
  "rocrate>=0.15.1",
]
storage = [
  "boto3>=1.43.55"
]
processing = [
  "batterydf>=0.2,<0.3",
  "matplotlib>=3.11.1",
  "plotly>=6.9.0",
]
dev = [
  "battinfo[tabular]",  # the suite exercises the tabular + publish feature paths,
  "battinfo[publish]",  # so CI (--all-extras) installs both optional groups
  "build>=1.5.1",
  "setuptools>=83.0.0",   # build backend, needed in-env for `build --no-isolation` (verification gate)
  "wheel",
  "twine>=5.0",       # dist metadata validation (`twine check`) before publishing
  "datamodel-code-generator>=0.70.0",
  "linkml>=1.8",
  "nbformat>=5.9",
  "nbmake>=1.5",      # execute guide notebooks in CI (pytest --nbmake docs/guides)
  "ipykernel>=6.29",  # kernel for nbmake execution
  "pyshacl>=0.40.0",
  "ruff>=0.16.0",
  "pytest>=9.1.1",
  "pytest-cov>=5.0",
  "pytest-timeout>=2.3",
  "pytest-socket>=0.7",
  "mypy>=2.3.0"
]
docs = [
  "autodoc-pydantic>=2.2",  # renders pydantic Field(description=...) in the API reference
  "sphinx>=7.3",
  "pydata-sphinx-theme>=0.20.0",
  "myst-parser>=3.0",
  "nbsphinx>=0.9",
  "ipython>=9.15.0",   # provides the 'ipython3' Pygments lexer nbsphinx needs for notebook cells
  "sphinx-design>=0.6",
]

[project.urls]
Homepage = "https://github.com/BIG-MAP/BattINFO"
Repository = "https://github.com/BIG-MAP/BattINFO"
Documentation = "https://github.com/BIG-MAP/BattINFO/tree/main/docs"
Issues = "https://github.com/BIG-MAP/BattINFO/issues"
Changelog = "https://github.com/BIG-MAP/BattINFO/blob/main/CHANGELOG.md"

[project.scripts]
battinfo = "battinfo.cli:app"

# TEMPORARY until batterydf 0.2.0 is on PyPI — remove and re-lock on release
[tool.uv.sources]
batterydf = { git = "https://github.com/battery-data-alliance/battery-data-format", rev = "f64c338" }

[tool.setuptools]
package-dir = { "" = "src" }

# Single source of truth for the version: src/battinfo/__init__.py __version__.
# setuptools resolves this statically (AST) without importing the package.
[tool.setuptools.dynamic]
version = { attr = "battinfo.__version__" }

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools.package-data]
battinfo = ["py.typed", "data/**/*"]

[tool.setuptools.exclude-package-data]
battinfo = ["**/__pycache__/*", "**/*.py[cod]"]

[tool.pytest.ini_options]
norecursedirs = ["legacy"]
# --strict-markers: unknown markers are an error (typo guard).
# --timeout: per-test wall-clock cap so a hung test can never stall CI.
# --disable-socket: enforce that the suite is fully offline. The publish/JSON-LD
#   path resolves bundled contexts locally; all other network use is mocked.
#   Loopback is allowed for any local-IPC use. A test that legitimately needs the
#   network must opt in with @pytest.mark.enable_socket.
addopts = "--strict-markers --timeout=300 --disable-socket --allow-hosts=127.0.0.1,::1,localhost"
markers = [
  "slow: long-running test",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
  "E501",   # line too long — handled by formatter, not enforced here
]

[tool.ruff.lint.per-file-ignores]
# Test files and maintainer scripts use sys.path.insert before imports — this is
# intentional so they can run without an editable install.
"tests/*.py" = ["E402"]
".tools/**/*.py" = ["E402"]
# The api facade re-exports the entire pre-split battinfo/api.py surface
# (public names plus the underscore helpers other modules and tests reach for),
# so "unused" imports there are the whole point.
"src/battinfo/api/__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
files = ["src/battinfo"]
ignore_missing_imports = true   # third-party libs (rdflib, pyld, rocrate, …) ship no stubs
warn_redundant_casts = true
warn_unused_ignores = false
# Incremental adoption: the package ships py.typed, so types are gated. Most modules
# are already clean and ARE checked — new type errors in them (or any new module) fail CI.
# The modules below carry pre-existing type debt and are excluded pending burn-down.
# (battinfo.ws was burned down and removed from the override 2026-07-07: the
# AuthoringWorkspace `list` method shadows builtin `list` in class-scope annotations,
# so annotations inside that class must spell it `builtins.list`.)

[[tool.mypy.overrides]]
module = [
  "battinfo.publication",
  "battinfo.authoring",
  "battinfo.interop.protocols",
  "battinfo.api",
  # api was split into a package (facade + submodules); the overrides cover the
  # same code that was excluded when it was the monolithic battinfo/api.py.
  "battinfo.api.*",
  "battinfo._workspace",
  "battinfo.transform.json_to_jsonld",
  "battinfo.interop.bpx",
  "battinfo.cli",
  "battinfo.bundle_adapter",
  "battinfo.bundle",
  "battinfo.local_workspace",
  "battinfo.interop.converter",
  "battinfo.contribution",
  "battinfo.zenodo",
  "battinfo.validate.schema",
  "battinfo.validate.references",
  "battinfo.validate.publication",
  "battinfo.ingest",
]
ignore_errors = true

[tool.coverage.run]
source = ["battinfo"]

[tool.coverage.report]
# Current total ~73%; floor set just below to lock in the level and gate
# regressions. Ratchet up as cli.py / ws.py coverage improves.
fail_under = 72
show_missing = true
